--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                     </section>
 
                     <section>
-                        <img width="900" data-src="images/mvn_odelo.jpg">
+                        <img width="600" data-src="images/mvn_odelo.jpg">
                     </section>
 
                     <section data-background="images/odela.jpg">
@@ -403,7 +403,7 @@
 
                 <section data-background="#000">
                     <h2 class="orange">Pitanja?</h2>
-                    <h4>@mihailo_isakov</h4>
+                    <h3 class="white" style="font-size: 20pt;">@mihailo_isakov</h3>
                 </section>
                 
 			</div>
