Razlikovanje poza dodato

--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
 
                     <section>
                         <h1 class="red">Rezultati rekonstrukcije</h1>
+                        <h3 class="orange fragment">razlikovanje poza?</h3>
                         <h4 class="fragment">metrika </h4>
                         <h4 class="fragment">glitching </h4>
                         <h4 class="fragment">neeuklidski prostor </h4>
